feat(investment-calculator): Extracted values with two way binding

--- a/investment-calculator/src/app/user-input/user-input.component.html
+++ b/investment-calculator/src/app/user-input/user-input.component.html
@@ -6,6 +6,7 @@
                 type="number"
                 id="initial-investment"
                 name="initial-investment"
+                [(ngModel)]="enteredInitialInvestment"
             />
         </p>
         <p>
@@ -14,6 +15,7 @@
                 type="number"
                 id="annual-investment"
                 name="annual-investment"
+                [(ngModel)]="enteredAnnualInvestment"
             />
         </p>
     </div>
@@ -24,6 +26,7 @@
                 type="number"
                 id="expected-return"
                 name="expected-return"
+                [(ngModel)]="enteredExpectedReturn"
             />
         </p>
         <p>
@@ -32,6 +35,7 @@
                 type="number"
                 id="duration"
                 name="duration"
+                [(ngModel)]="enteredDuration"
             />
         </p>
     </div>
