--- a/investment-calculator/src/app/investment-results/investment-results.component.html
+++ b/investment-calculator/src/app/investment-results/investment-results.component.html
@@ -1,16 +1,27 @@
-<p>Please enter some values and press calculate</p>
-
-<table>
-    <thead>
-        <tr>
-            <th>Year</th>
-            <th>Investment value</th>
-            <th>Interest (Year)</th>
-            <th>Total Interest</th>
-            <th>Invested Capital</th>
-        </tr>
-    </thead>
-    <tbody>
-        
-    </tbody>
-</table>
+@if (!results) {
+    <p class="center">Please enter some values and press calculate</p>
+} @else {
+    <table>
+        <thead>
+            <tr>
+                <th>Year</th>
+                <th>Investment value</th>
+                <th>Interest (Year)</th>
+                <th>Total Interest</th>
+                <th>Invested Capital</th>
+            </tr>
+        </thead>
+        <tbody>
+            @for (result of results; track result.year)
+            {
+                <tr>
+                    <td>{{result.year}}</td>
+                    <td>{{result.valueEndOfYear}}</td>
+                    <td>{{result.interest}}</td>
+                    <td>{{result.totalInterest}}</td>
+                    <td>{{result.totalAmountInvested}}</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
