--- a/operations-center/src/app/shared/button/button.component.html
+++ b/operations-center/src/app/shared/button/button.component.html
@@ -2,5 +2,7 @@
     <ng-content />
 </span>
 <span class="icon">
-    <ng-content select="icon" />
+    <ng-content select="icon">
+        →
+    </ng-content>
 </span>
