--- a/operations-center/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/operations-center/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,12 +1,10 @@
 <form>
-    <p>
-        <label for="title">Title</label>
+    <app-control label="Title">
         <input id="title" name="title" />
-    </p>
-    <p>
-        <label for="request">Request</label>
+    </app-control>
+    <app-control label="Request">
         <textarea id="request" name="request" rows="3"></textarea>
-    </p>
+    </app-control>
     <p>
         <button appButton>
             Submit
