--- a/operations-center/src/app/dashboard/server-status/server-status.component.css
+++ b/operations-center/src/app/dashboard/server-status/server-status.component.css
@@ -1,7 +1,7 @@
-#status {
-    display: block;
-    width: 15rem;
-  }
+  :host {
+      display: block;
+      width: 15rem;
+    }
   
   .status p:first-of-type {
     font-weight: bold;
