--- a/operations-center/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/operations-center/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,4 +1,4 @@
-<form>
+<form (ngSubmit)="onSubmit()">
     <app-control label="Title">
         <input id="title" name="title" />
     </app-control>
