--- a/operations-center/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/operations-center/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,6 +1,6 @@
-<form (ngSubmit)="onSubmit()">
+<form (ngSubmit)="onSubmit(titleInput)">
     <app-control label="Title">
-        <input id="title" name="title" />
+        <input id="title" name="title" #titleInput />
     </app-control>
     <app-control label="Request">
         <textarea id="request" name="request" rows="3"></textarea>
