feat(operations-control): Extracted input values via template variables

--- a/operations-center/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/operations-center/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,9 +1,9 @@
-<form (ngSubmit)="onSubmit(titleInput)">
+<form (ngSubmit)="onSubmit(titleInput.value, textInput.value)">
     <app-control label="Title">
         <input id="title" name="title" #titleInput />
     </app-control>
     <app-control label="Request">
-        <textarea id="request" name="request" rows="3"></textarea>
+        <textarea id="request" name="request" rows="3" #textInput></textarea>
     </app-control>
     <p>
         <button appButton>
