feat(operations-control): Added examples for ViewChild vs ContentChild

--- a/operations-center/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/operations-center/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,9 +1,9 @@
 <form (ngSubmit)="onSubmit(titleInput.value, textInput.value)" #form>
     <app-control label="Title">
-        <input id="title" name="title" #titleInput />
+        <input id="title" name="title" #titleInput #input />
     </app-control>
     <app-control label="Request">
-        <textarea id="request" name="request" rows="3" #textInput></textarea>
+        <textarea id="request" name="request" rows="3" #textInput #input></textarea>
     </app-control>
     <p>
     <button appButton>
